# Introducci-n-a-Docker

./: LICENSE  README.md
.github/workflows/: marp-to-pages.yml
Slides/: 01-internet-y-el-protocolo-http.md  01-introduccion-a-docker.md
Slides/styles/: etsisi.css
Sources/: pyproject.toml
Sources/notebooks/: Web scraping con Python.ipynb
